--- a/pages/values.module.scss
+++ b/pages/values.module.scss
@@ -62,8 +62,6 @@
 .articleContainer {
   flex-basis: breakpoints.$md;
   margin: 0 20px;
-  word-wrap: break-word;
-  word-break: break-all;
 
   @include breakpoints.breakpoint-up(sm) {
     margin: 0 40px;
@@ -79,7 +77,7 @@
   margin-top: 0;
 }
 
-.articleContainer h2 {
+.articleContainer h1, .articleContainer h2, .articleContainer h3, .articleContainer h4 {
   margin: 1em 0 0.5em;
 }
 
@@ -93,6 +91,10 @@
 // Targets references section
 .articleContainer ol li p {
   margin: 0;
+}
+
+.articleContainer ol li p a {
+  word-wrap: break-word;
 }
 
 .articleSideContainer {
